--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
+<img src>="https://github.com/fluxie38/First/blob/master/octocat.png" />
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to my first GitHub Pages website!</p>
 
