--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="https://github.com/fluxie38/First/blob/master/octocat.png" />
+<img src="https://github.com/fluxie38/fluxie38.github.io/blob/master/octocat.png" />
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to my first GitHub Pages website!</p>
 
